# mining_proxy

./: .dockerignore  .env  .gitattributes  .gitignore  0.0.1 版本日志  0.1.0开发步骤  0.1.2 开发日志  0.1.3 开发日志  0.1.4开发日志  0.1.5开发日志  0.1.6开发日志  0.1.7开发日志  0.1.8开发日志  0.1.9开发日志  0.2.0开发日志  0.2.1开发日志  0.2.2开发日志  Cargo.toml  Cross.toml  DEVELOP.md  Dockerfile  README.md  build.rs  configs.yaml  default.yaml  dockerfile  fake  identity.p12  install.md  install.sh  makefile  mining_proxy  perf.data  perf.data.old  proxy.service  rustfmt.toml
core/: Cargo.toml
core/src/client/: #handle_stream.rs#  .#monitor.rs  connect.rs  encry.rs  fee.rs  handle_stream.rs  handle_stream_all.rs  handle_stream_nofee.rs  mod.rs  tcp.rs  tls.rs
core/src/protocol/: ethjson.rs  stratum.rs
core/src/protocol/rpc/eth/: mod.rs
core/src/proxy/: mod.rs
core/src/server/: mod.rs  tcp.rs
core/src/server/socket/: mod.rs
core/src/state/: mod.rs
core/src/util/: config.rs  mod.rs
core/src/web/data/: mod.rs
core/src/web/handles/: server.rs  user.rs
db/: proxy.db
doc/: 0.0.1 版本日志  0.1.2 开发日志  0.1.4开发日志  0.1.8开发日志  0.2.3开发日志  0.2.4.org  0.2.4开发日志  fake  install.md
encrypt/: Cargo.toml
encrypt/src/: encrypt.rs  lib.rs  main.rs
local-pool/: Cargo.toml
local-pool/src/: encrypt.rs  encrypt.rs~  main.rs  main.rs~
local-pool/src/server/: mod.rs
local-pool/src/utils/: write.rs
mining_proxy/: .gitignore  Cargo.toml  makefile
mining_proxy/src/: main.rs
mining_proxy/src/client/: encry.rs  encryption.rs.backup  handle_stream.rs  handle_stream_all.rs  handle_stream_timer.rs
mining_proxy/src/protocol/rpc/eth/: mod.rs
mining_proxy/src/proxy/: mod.rs
mining_proxy/src/state/: mod.rs
mining_proxy/src/util/: config.rs  logger.rs  mod.rs
mining_proxy/src/web/handles/: auth.rs  server.rs
mining_proxy_web/: Cargo.toml
mining_proxy_web/src/: main.rs
monitor/: Cargo.toml  build.rs
monitor/src/: main.rs
protos/: Cargo.toml  build.rs  request.proto
protos/protos/: ping.proto
protos/src/: lib.rs  lib.rs~
protos/src/protos/: ping.rs
proxy/: Cargo.toml  build.rs
proxy/src/: identity.p12  main.rs
release/encrypt/: Dockerfile  encrypt
release/mining_proxy/: Dockerfile  mining_proxy
release/proxy/: Dockerfile
script/: generate-certificate.sh  install.sh  nginx.proxy  proxy.service
src/: agent.rs  lib.rs  main.rs
src/client/: encry.rs  encryption.rs  fee.rs  handle_stream copy.rs  handle_stream.rs  handle_stream_agent.rs  handle_stream_all.rs  handle_stream_new.rs  handle_stream_new.rs.bak  handle_stream_new_ssl.rs  handle_stream_new_ssl.rs.bak  handle_stream_nofee.rs  handle_stream_timer copy.rs  handle_stream_timer.rs  mine.rs  mod.rs  mod1.rs  mod1.rsb  monitor.rs  pool.rsb  pools.rs  tcp copy.rs  tcp copy.rsb  tcp.rs  tls.rs  tls1.rsb  worker.rs
src/jobs/: mod.rs
src/mine/: dev_fee.rs  develop.rs  develop.rs1  develop.rsb  develop1.rs  develop1.rsb  fee.rs  mod.rs  old_fee.rs  old_fee.rsb
src/mode/: client.rs  server.rs
src/protocol/: eth_stratum.rs  ethjson.rs  mod.rs  stratum.rs
src/protocol/ethjson/: json_protocol.rs
src/protocol/rpc/eth/: mod.rs
src/proxy/: mod.rs
src/server/: tcp.rs
src/state/: mod.rs
src/util/: config.rs  logger.rs  mod.rs
src/web/: actions.rs  greet.rs  mod.rs  models.rs  schema.rs  webmain.rs
src/web/data/: mod.rs
src/web/handles/: auth.rs  mod.rs  server.rs  user.rs
utils/: Cargo.toml  Cargo.toml~
utils/src/: lib.rs  lib.rs~
