[package]
name = "mining_proxy"
version = "0.2.2"
edition = "2018"
authors = ["YusongWang admin@wangyusong.com"]
description = "A simple Eth Proxy\n一个简单的以太坊SSL代理工具\n本工具是开放软件，任何人都可以免费下载和使用。\n请遵循本地法律的情况下使用。如非法使用由软件使用人承担一切责任\n"
build = "build.rs"

[dependencies]
clap = "2.34.0"
anyhow = "1.0.51"
tokio = { version = "1.13.0", features = ["full"] }
config = "0.11"
serde =  { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
futures = "0.3.17"
native-tls = "0.2.8"
tokio-native-tls = "0.3.0"
bytes = "1"
hostname = "0.3.1"
rand = "0.8.3"
rand_chacha = "0.3.1"
hex = "0.4.3"
# sentry = "0.23.0"
# sentry-log = "0.23.0"
fern = "0.5"
async-channel = "1.6.1"
lru = "0.7.2"
openssl-sys = "0.9"
openssl = { version = "0.10"}
prettytable-rs = "^0.8"
base64 = "0.13.0"
cfg-if = "1.0.0"
short-crypt = "1.0.25"
ethereum-hexutil = "0.2.3"
openssl-probe = "0.1.5"
human_bytes = "0.3"
jsonwebtoken = "7"
axum = { version = "0.4", features = ["headers"] }
sea-orm = { version = "0.5", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"], default-features = false }
# async-trait = "0.1.52"
# actix-web = "3"
# actix-rt = "*"
# diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
# actix-files = "*"
#lazy_static = "1.4.0"
[build-dependencies]
vergen = "0.1"

[profile.release]
panic = 'abort'
opt-level = "s"
lto = true
#incremental = false

[features]
nofee = []
agent = []

# [target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "target-feature=+crt-static"]
# [target.armv7-unknown-linux-musleabihf]
# linker = "armv7l-linux-musleabihf-gcc"

# [target.aarch64-unknown-linux-musl]
# linker = "aarch64-linux-musl-gcc"
# rustflags = ["-C", "target-feature=+crt-static", "-C", "link-arg=-lgcc"]