[package]
authors = ["YusongWang admin@wangyusong.com"]
build = "build.rs"
description = "A simple Eth Proxy\n一个简单的矿工代理工具\n本工具是开放软件，任何人都可以免费下载和使用。\n请遵循本地法律的情况下使用。如非法使用由软件使用人承担一切责任\n"
edition = "2021"
name = "mining_proxy"
version = "0.2.3"

[dependencies]
anyhow = "1.0.51"
bytes = "1"
chrono = "0.4"
clap = "2.34.0"
config = "0.11"
futures = "0.3.17"
hex = "0.4.3"
hostname = "0.3.1"
log = "0.4"
native-tls = "0.2.8"
rand = "0.8.3"
rand_chacha = "0.3.1"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.17.0", features = ["full"]}
tokio-native-tls = "0.3.0"
# sentry = "0.23.0"
# sentry-log = "0.23.0"
#fern = "0.5"
lru = "0.7.2"
async-channel = "1.6.1"
broadcaster = "1.0.0"
openssl = {version = "0.10"}
openssl-sys = "0.9"
#prettytable-rs = "^0.8"
base64 = "0.13.0"
cfg-if = "1.0.0"
ethereum-hexutil = "0.2.3"
openssl-probe = "0.1.5"
short-crypt = "1.0.25"
#human_bytes = { version = "0.3", features = ["bibytes"] }
actix-web = "4.0.0-rc.2"
actix-web-grants = "3.0.0-beta.6"
actix-web-static-files = {version = "3.0.5", git = "https://github.com/enaut/actix-web-static-files.git"}
dotenv = "0.15.0"
human-panic = "1.0.3"
jsonwebtoken = "7"
lazy_static = "1.4.0"
num_enum = "0.5.6"
serde_derive = "1.0.0"
serde_millis = "0.1.1"
serde_yaml = "0.8.23"
static-files = "0.2.1"
time = "*"
tracing = "0.1.30"
tracing-appender = "0.2.0"
tracing-subscriber = {version = "0.3.3"}

[build-dependencies]
actix-web-static-files = {version = "3.0.5", git = "https://github.com/enaut/actix-web-static-files.git"}
static-files = "0.2.1"
vergen = "0.1"

[profile.release]
lto = true
opt-level = "s"
panic = 'abort'
#debug = true
#incremental = false

[features]
#nofee = []
#agent = []

# [target.x86_64-pc-windows-msvc]
# rustflags = ["-C", "target-feature=+crt-static"]
# [target.armv7-unknown-linux-musleabihf]
# linker = "armv7l-linux-musleabihf-gcc"

# [target.aarch64-unknown-linux-musl]
# linker = "aarch64-linux-musl-gcc"
# rustflags = ["-C", "target-feature=+crt-static", "-C", "link-arg=-lgcc"]
