[package]
name = "encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
aes-gcm = "0.9.4"
clap = "2.34.0"
tracing = "0.1.30"
tracing-appender = "0.2.0"
tracing-subscriber = "0.3.3"
tokio = {version = "1.17.0", features = ["full"]}
base64 = "0.13.0"