[package]
name = "encrypt"
version = "0.1.0"
edition = "2021"
authors = ["YusongWang admin@wangyusong.com"]
description = "A simple Eth Proxy\n一个简单的矿工代理工具\n本工具是开放软件，任何人都可以免费下载和使用。\n请遵循本地法律的情况下使用。如非法使用由软件使用人承担一切责任\n"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
aes-gcm = "0.9.4"
clap = "2.34.0"
tracing = "0.1.30"
tracing-appender = "0.2.0"
tracing-subscriber = "0.3.3"
tokio = {version = "1.17.0", features = ["full"]}
base64 = "0.13.0"

[package.metadata.deb]
maintainer = "Michael Aaron Murphy <mmstickman@gmail.com>"
copyright = "2017, Michael Aaron Murphy <mmstickman@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cargo-deb", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]