[package]
name = "local_pool"
version = "0.1.0"
edition = "2021"
authors = ["YusongWang admin@wangyusong.com"]
description = "A simple Eth Proxy\n一个简单的矿工代理工具\n本工具是开放软件，任何人都可以免费下载和使用。\n请遵循本地法律的情况下使用。如非法使用由软件使用人承担一切责任\n"


[dependencies]
anyhow = "1.0.51"
chrono = "0.4"
clap = "2.34.0"
tracing = "0.1.30"
tracing-appender = "0.2.0"
tracing-subscriber = "0.3.3"
tokio = {version = "1.17.0", features = ["full"]}
utils = {path = "../utils"}