[package]
name = "monitor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = "2.34.0"
core = {path = "../core"}
tokio = {version = "1.17.0", features = ["full"]}
tracing = "0.1.30"
tracing-appender = "0.2.0"
tracing-subscriber = "0.3.3"
chrono = "0.4"

[build-dependencies]
vergen = "0.1"