[package]
name = "protos"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2.27.1", features = ["with-bytes"] }

[build-dependencies]
protoc-rust = "2"
protobuf-codegen-pure = "2"
