[package]
build = "build.rs"
edition = "2021"
name = "proxy"
version = "0.1.0"
description = "A simple Eth Proxy\n一个简单的矿工代理工具\n本工具是开放软件，任何人都可以免费下载和使用。\n请遵循本地法律的情况下使用。如非法使用由软件使用人承担一切责任\n"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-web-grants = "3.0.0-beta.6"
actix-web-static-files = {version = "3.0.5", git = "https://github.com/enaut/actix-web-static-files.git"}
anyhow = "1.0.51"
async-channel = "1.6.1"
base64 = "0.13.0"
bytes = "1"
cfg-if = "1.0.0"
chrono = "0.4"
clap = "2.34.0"
config = "0.11"
dotenv = "0.15.0"
ethereum-hexutil = "0.2.3"
mining_proxy = {path = "../mining_proxy"}
#futures = "0.3.17"
hex = "0.4.3"
hostname = "0.3.1"
human-panic = "1.0.3"
jsonwebtoken = "7"
lazy_static = "1.4.0"
native-tls = "0.2.8"
num_enum = "0.5.6"
rand = "0.8.3"
rand_chacha = "0.3.1"
serde = {version = "1.0.130", features = ["derive"]}
serde_derive = "1.0.0"
serde_json = "1.0"
serde_millis = "0.1.1"
serde_yaml = "0.8.23"
static-files = "0.2.1"
time = "*"
tokio = {version = "1.17.0", features = ["full"]}
tokio-native-tls = "0.3.0"
tracing = "0.1.30"
tracing-appender = "0.2.0"
tracing-subscriber = "0.3.3"

[build-dependencies]
actix-web-static-files = {version = "3.0.5", git = "https://github.com/enaut/actix-web-static-files.git"}
static-files = "0.2.1"
vergen = "0.1"
