[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = {version =  "0.3.3", features = ["env-filter"]}
crossterm = "0.23.1"
#features = [ "env-filter", "parking_lot" ] 
